--- a/themes/custom/mytheme/package.json
+++ b/themes/custom/mytheme/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "aos": "^2.3.4",
     "gsap": "^3.13.0",
     "tailwindcss": "^4.1.14",
     "three": "^0.180.0"
