--- a/.htaccess
+++ b/.htaccess
@@ -183,3 +183,6 @@ AddType image/webp .webp
   # Disable Proxy header, since it's an attack vector.
   RequestHeader unset Proxy
 </IfModule>
+<FilesMatch "\.(js|css|png|jpg|gif|svg)$">
+  Require all granted
+</FilesMatch>
